# Tuya-Plantsio-Ivy2.0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_app.sh  config.env  kconfigs.in  kconfigs_projbuild.in  platform.mk  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old  tuyaos_kernel.config
app/: CMakeLists.txt  (+9 more)
ivy/: CMakeLists.txt
ivy/anim/: AnimDriver.cpp  AnimDriver.h  AudioDriver.cpp  AudioDriver.h  CMakeLists.txt  IvyAnim.cpp  IvyAnim.h  MjpegDriver.cpp  MjpegDriver.h
ivy/anim/audio/: AudioCodec.h
ivy/anim/video/: MjpegCodec.cpp  MjpegCodec.h
ivy/anim/video/libs/: JPEGDEC.cpp  JPEGDEC.h  jpeg.inl
ivy/interface/: CMakeLists.txt  LED.cpp  LED.h  Screen.cpp  Screen.h
tuya/: CMakeLists.txt
tuya/docs/: annotatedstructs.html  dir_000015_000056.html  dir_000015_000064.html  dir_000015_000083.html  dir_000015_000110.html  dir_000021_000044.html  dir_000021_000130.html  dir_000027_000013.html  dir_000027_000025.html  dir_000029_000007.html  dir_000029_000012.html  dir_000029_000021.html  dir_000029_000024.html  dir_000029_000031.html  dir_000029_000037.html  dir_000029_000042.html  dir_000029_000047.html  dir_000029_000048.html  dir_000029_000049.html  dir_000029_000092.html  dir_000029_000102.html  dir_000029_000119.html  dir_000029_000134.html  dir_000029_000135.html  dir_000029_000136.html  dir_000034_000045.html  dir_000034_000131.html  dir_000039_000013.html  dir_000039_000025.html  dir_000045_000042.html  dir_000045_000119.html  dir_000046_000013.html  dir_000046_000025.html  dir_000053_000077.html  dir_000053_000124.html  dir_000053_000125.html  dir_000053_000132.html  dir_000056_000075.html  dir_000056_000077.html  dir_000056_000078.html  (+570 more)
tuya/docs/d0/d06/: tkl__security_8h__incl.map  tkl__security_8h__incl.md5
tuya/docs/d0/d15/: tal__bluetooth__mesh__device_8h__incl.map  tal__bluetooth__mesh__device_8h__incl.md5
tuya/docs/d0/d20/: structTAL__MESH__FIRMWARE__INFOR__T.html
tuya/docs/d0/d23/: unionTY__OBJ__DP__VALUE__U.html
tuya/docs/d0/d2b/: tuya__svc__mqtt__direct_8h__incl.map  tuya__svc__mqtt__direct_8h__incl.md5
tuya/docs/d0/d34/: group__se__aead.html
tuya/docs/d0/d35/: structTKL__ZLL__DEV__LIST__T__coll__graph.map  structTKL__ZLL__DEV__LIST__T__coll__graph.md5
tuya/docs/d0/d38/: structTKL__ISP__DN__SWITCH__CONFIG__T.html
tuya/docs/d0/d40/: structTKL__BLE__GATT__CHAR__HANDLE__T.html  structTUYA__CELLULAR__GNSS__LOCATION__INFO__T.html
tuya/docs/d0/d41/: tkl__hash_8h__incl.map  tkl__hash_8h__incl.md5  tuya__svc__schema__upgrade_8h__incl.map  tuya__svc__schema__upgrade_8h__incl.md5
tuya/docs/d0/d43/: iot__httpc_8h.html  iot__httpc_8h_source.html  structSUM__ZONE__TBL__S__coll__graph.map  structSUM__ZONE__TBL__S__coll__graph.md5  tuya__svc__online__log_8h.html  tuya__svc__online__log_8h_source.html
tuya/docs/d0/d49/: structTUYA__BLE__BT__PARA.html
tuya/docs/d0/d4a/: unionpsa__driver__mac__context__t.html
tuya/docs/d0/d4d/: tkl__fs_8h__incl.map  tkl__fs_8h__incl.md5
tuya/docs/d0/d54/: tkl__nbiot__ctcc_8h__incl.map  tkl__nbiot__ctcc_8h__incl.md5
tuya/docs/d0/d5a/: cipher__wrapper_8h_source.html
tuya/docs/d0/d5e/: structTAL__MESH__LOCAL__INFO__T.html  structTKL__CELL__BASE__INTF__T.html
tuya/docs/d0/d68/: md_docs__xE5_xB7_xA5_xE4_xBD_x9C_xE9_x98_x9F_xE5_x88_x97.html
tuya/docs/d0/d6f/: structWLAN__DATA__IF__S.html  tuya__zigbee__stack_8h__dep__incl.map  tuya__zigbee__stack_8h__dep__incl.md5
tuya/docs/d0/d72/: structTKL__AUDIO__FRAME__INFO__T.html
tuya/docs/d0/d73/: structTAL__MESH__DATA__T.html  tkl__init__common_8h__incl.map  tkl__init__common_8h__incl.md5
tuya/docs/d0/d77/: tuya__zigbee__attribute_8h.html  tuya__zigbee__attribute_8h_source.html
tuya/docs/d0/d78/: tkl__cellular__mds_8h__dep__incl.map  tkl__cellular__mds_8h__dep__incl.md5
tuya/docs/d0/d79/: structTY__INIT__PARAMS__S.html
tuya/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1b.js  all_1d.js  all_1e.html  all_1e.js  all_1f.html  all_1f.js  all_2.js  all_20.html  all_21.html  all_22.html  all_23.html  all_24.html  all_24.js  all_25.html  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+217 more)
tuya/scripts/: Makefile  build_app.user.sh  h2ablity.py  prepare_app.user.sh  set_iotosconfig.py  tools_update.sh
tuya/scripts/error_code/: log-seq-en.json  log-seq.json  module-en.json  module.json
tuya/scripts/mk/: app.mk  config.mk
(+1754 files in other folders)
